--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -20,6 +20,10 @@
     "login.formTitle": "Login",
     "login.username": "Username",
     "login.password": "Password",
+    "register.formTitle": "Register",
+    "register.username": "Username",
+    "register.password": "Password",
+    "register.email": "Email",
     "getThreadForm.formTitle": "Thread UID",
     "getThreadForm.submit": "Go",
     "replyThread.username": "Username",
