--- a/static/lang/zh_hans.json
+++ b/static/lang/zh_hans.json
@@ -20,6 +20,10 @@
     "login.formTitle": "登录",
     "login.username": "用户名",
     "login.password": "密码",
+    "register.formTitle": "注册",
+    "register.username": "用户名",
+    "register.password": "密码",
+    "register.email": "邮箱",
     "getThreadForm.formTitle": "讨论串号",
     "getThreadForm.submit": "前往",
     "replyThread.username": "用户名",
