--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -16,7 +16,7 @@
     "navigation.public": "Public",
     "navigation.login": "Login",
     "navigation.sidebarName": "Private Tree Hole",
-    "public.title": "Announcement",
+    "public.title": "public",
     "login.formTitle": "Login",
     "login.username": "Username",
     "login.password": "Password",
